fix-styles: - reset css and clear default styles -> index.css - remove wrapped Button with Link tag - RegistrationForm.tsx, NotFoundPage.tsx, Error.tsx, PageNav.tsx styled with Material UI

--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -1,8 +1,3 @@
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
 .topnav {
   width: 100%;
   min-height: 71px;
@@ -10,26 +5,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.main-menu-link {
-  list-style-type: none;
-  text-decoration: none;
-  margin: 0 auto;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-  min-height: 71px;
-  width: 100%;
-}
-
-.main-menu-link a {
-  text-decoration: none;
-  font-size: 16px;
-  font-family: var(--font-family-satoshi);
-  color: var(--color-text-link);
 }
 
 .main-logo {
